# WUDAO

./: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
.learnings/: ERR-001-structlog-printlogger.md
apps/web/: package-lock.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/journal/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/strategies/: page.tsx
apps/web/src/app/trade/: OrderSubmissionPanel.tsx  PositionSizingCalculator.tsx  (+1 more)
apps/web/src/components/: Sidebar.tsx  TopBar.tsx
apps/web/src/lib/: api.ts  exchange-accounts.ts  orders.ts  position-sizing.ts
docs/: ui-design-brief.md  产品设计-v2.md  产品设计（最初版）.md  悟道-V1-开发规格书-Claude-Code版.md  技术架构草案.md
infra/db/: seed.py
infra/db/migrations/: env.py
infra/db/migrations/versions/: 0ad820b4034c_add_exchange_accounts.py  cffd6db0358c_initial_app_settings.py
infra/scripts/: dev.sh
python/adapters/: ccxt_adapter.py  factory.py
python/core/: crypto.py  database.py  exchange_service.py  logging_config.py  mode.py  models.py
python/domain/: exchange.py  position_sizer.py
services/api/: config.py  main.py
services/api/routers/: __init__.py  exchange_account_router.py  health.py  order_router.py  position_router.py  settings_router.py  webhook_router.py
tests/adapters/: test_ccxt_adapter.py
tests/api/: test_exchange_account_router.py  test_order_router.py  test_position_router.py  test_webhook_router.py
tests/core/: test_crypto.py
tests/domain/: test_exchange.py  test_position_sizer.py
