[tool.poetry]
name = "wudao"
version = "0.1.0"
description = "Wudao trading execution workbench"
authors = ["Jason"]
readme = "README.md"
packages = [
    { include = "python" },
    { include = "services" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
sqlmodel = ">=0.0.19"
alembic = ">=1.13.0"
pydantic-settings = ">=2.2.0"
structlog = ">=24.1.0"
python-dotenv = ">=1.0.1"
cryptography = ">=42.0.0"
ccxt = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
